--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  background-color: var(--white-background-color);
   font-family: Roboto, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -29,13 +30,14 @@ h1 {
   font-weight: 700;
   font-size: 56px;
   letter-spacing: 0.02em;
-  line-height: 60px;
+  line-height: 1.07;
 }
 
 h2 {
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.02em;
+  line-height: 1.11;
 }
 
 h3 {
@@ -65,18 +67,18 @@ button {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.04em;
-  padding: 16px 32px;
   background-color: var(--primary-background-color);
   color: var(--primary-foreground-color);
-  border-radius: 4px;
   border: none;
   cursor: pointer;
-  box-shadow:
-    0px 0px 12px 0px #0000000d inset,
-    0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 button:hover {
+  background-color: var(--pressed-background-color);
+  color: var(--pressed-foreground-color);
+}
+
+button:focus {
   background-color: var(--pressed-background-color);
   color: var(--pressed-foreground-color);
 }
@@ -89,22 +91,21 @@ a {
 
 header {
   background-color: var(--white-background-color);
-  border-bottom: 1px solid var(--accent-color);
 }
 
 .logo {
   text-transform: uppercase;
-  font-family: "Ralway", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration: none;
-  color: inherit;
+  color: var(--primary-background-color);
 }
 
 .logo span {
-  color: var(--primary-background-color);
+  color: var(--dark-color);
 }
 
 .navigation a {
@@ -112,15 +113,23 @@ header {
 }
 
 .navigation a:hover {
-  color: var(--primary-background-color);
-}
-
-.navigation a.active {
   color: var(--pressed-background-color);
 }
 
+.navigation a:active {
+  color: var(--pressed-background-color);
+}
+
+.address {
+  font-style: normal;
+}
+
 .addresses a:hover {
-  color: var(--primary-background-color);
+  color: var(--pressed-background-color);
+}
+
+.addresses a:active {
+  color: var(--pressed-background-color);
 }
 
 .hero {
@@ -128,46 +137,43 @@ header {
   color: var(--dark-foreground-color);
   text-align: center;
   height: 600px;
-  box-shadow: 0px 0px 12px 0px #0000000d inset;
 }
 
-.features > h2 {
-  display: none;
+.section-header {
+  color: var(--dark-color);
 }
 
 .team {
   background-color: var(--light-background-color);
-  box-shadow: 0px 0px 12px 0px #0000000d inset;
 }
 
-.team > h2 {
+.team .section-header {
+  text-transform: capitalize;
   text-align: center;
 }
 
 .team .team-member {
   background-color: var(--white-background-color);
-  box-shadow:
-    0px 2px 1px 0px #2e2f4214,
-    0px 1px 1px 0px #2e2f4229,
-    0px 1px 6px 0px #2e2f4214;
-  border-radius: 0px 0px 4px 4px;
-  padding-bottom: 32px;
 }
 
 .team .team-member h3 {
   color: var(--dark-color);
 }
 
+.team .team-member-role {
+  font-size: 16px;
+}
+
 .portfolio {
   border: 1px solid var(--accent-background-color);
 }
 
-.portfolio h2 {
+.portfolio .section-header {
+  text-transform: capitalize;
   text-align: center;
 }
 
 .portfolio .portfolio-item .description {
-  padding: 16px 32px;
   border-width: 0px 1px 1px 1px;
   border-style: solid;
   border-color: var(--accent-color);
@@ -176,5 +182,4 @@ header {
 footer {
   background-color: var(--dark-background-color);
   color: var(--dark-foreground-color);
-  box-shadow: 0px 0px 12px 0px #0000000d inset;
 }
